# cookiecutter-pypaper

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  cookiecutter.json  pypaper.py  pyproject.toml
hooks/: post_gen_project.py
tests/: conftest.py  test_render_ci_cd.py  test_render_post_gen_hook.py  test_render_pyproject_toml.py  test_render_readme.py
{{cookiecutter.repo_name}}/: .cookiecutterrc  AUTHORS.md  README.md  README.rst  pyproject.toml
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __main__.py  cli.py  settings.py
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.package_name}}.py
