[tool.poetry]
name = "{{ cookiecutter.distribution_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    "{{ cookiecutter.full_name }}"
    ]
license = "{{ cookiecutter.license }}"
readme = "README.md"
repository = "https://{{ cookiecutter.repo_hosting }}/{{ cookiecutter.repo_username }}/{{ cookiecutter.repo_name }}"
documentation = "{{ cookiecutter.sphinx_docs_hosting }}"
keywords = [
{%- if cookiecutter.keywords | trim != '' %}
    {%- for keyword in cookiecutter.keywords.split(',') %}
    "{{ keyword }}",
    {%- endfor %}
{%- endif %}
]
packages = [
    { include = "{{ cookiecutter.package_name }}", from = "src" }
]
include = [
    "AUTHORS.rst",
    "CHANGELOG.rst",
    "CONTRIBUTING.rst",
    "LICENSE",
    "README.rst",
    ".bumpversion.cfg",
    ".cookiecutterrc.",
    ".coveragerc.",
    ".editorconfig",
{%- if cookiecutter.pre_commit == "yes" %}
    ".pre-commit-config.yaml",
{%- endif %}
{%- if cookiecutter.support_type_checking == "no" %}
    "src/{{ cookiecutter.package_name }}/py.typed",
{%- endif %}
    "noxfile.py",
]
classifiers = [
        # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
{%- if cookiecutter.license == "no" %}
{%- elif cookiecutter.license in ["BSD 2-Clause License", "BSD 3-Clause License"] %}
    "License :: OSI Approved :: BSD License",
{%- elif cookiecutter.license == "MIT license" %}
    "License :: OSI Approved :: MIT License",
{%- elif cookiecutter.license == "ISC license" %}
    "License :: OSI Approved :: ISC License (ISCL)",
{%- elif cookiecutter.license == "Apache Software License 2.0" %}
    "License :: OSI Approved :: Apache Software License",
{%- elif "LGPLv3+" in cookiecutter.license %}
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)"
{%- elif "LGPLv3" in cookiecutter.license %}
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)"
{%- elif "LGPLv2" in cookiecutter.license %}
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)"
{%- elif "LGPLv2" in cookiecutter.license %}
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)"
{%- endif %}
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
{%- if cookiecutter.pypi_disable_upload == "yes" %}
    "Private :: Do Not Upload",
{%- endif %}
]
{%- if cookiecutter.command_line_interface != "no" %}

[tool.poetry.scripts]
{{ cookiecutter.cli_bin_name }} = '{{ cookiecutter.package_name }}.cli:main'
{%- endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
{% if cookiecutter.command_line_interface not in ['plain', 'no'] -%}
{{ cookiecutter.command_line_interface }} = "*"
{%- endif %}
{%- if cookiecutter.command_line_interface == 'typer' %}
rich = '*'
{%- endif %}

[tool.poetry.group.nox.dependencies]
nox-poetry = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
{%- if cookiecutter.pytest_datadir %}
pytest-datadir = "*"
{%- endif %}
{%- if cookiecutter.pytest_xdist %}
pytest-xdist = "*"
{%- endif %}

[tool.poetry.group.type_check.dependencies]
mypy = "*"

[tool.poetry.group.lint.dependencies]
ruff = "0.0.278"

[tool.poetry.group.format.dependencies]
black = "*"

[tool.poetry.group.vcs.dependencies]
{%- if cookiecutter.pre_commit == "yes" %}
pre-commit = "^2.20.0"
{%- endif %}
bump2version = "^1.0.1"
{%- if cookiecutter.gitchangelog == "yes" %}
gitchangelog = "^3.0.4"
{%- endif %}

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"
{{ cookiecutter.sphinx_theme }} = "*"

[tool.black]
line-length = 79
target-version = ["py311"]
skip-string-normalization = true

[tool.coverage.paths]
source =[
   'src',
   '*/site-packages'
]

[tool.coverage.run]
branch = true

[tool.mypy]
explicit_package_bases = true
modules = [
    "docs.source.conf",
    "noxfile"
]
packages = [
    "{{ cookiecutter.package_name }}",
    "tests"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-ra",
    "--strict-markers",
    "--doctest-modules",
    "--doctest-glob=*.rst",
    "--tb=short"
]
filterwarnings = "error"
norecursedirs = "migrations"
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py"
]
testpaths = "tests"

[tool.ruff]
extend-exclude = ["static", "ci/templates"]
ignore = [
    "RUF001", # ruff-specific rules ambiguous-unicode-character-string
    "S101", # flake8-bandit assert
    "S308", # flake8-bandit suspicious-mark-safe-usage
    "E501", # pycodestyle line-too-long
]
line-length = 79
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "EXE", # flake8-executable
    "F", # pyflakes
    "I", # isort
    "INT", # flake8-gettext
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PLC", # pylint convention
    "PLE", # pylint errors
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
forced-separate = ["conftest"]
force-single-line = true
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.per-file-ignores]
"noxfile.py" = ["EXE002"]
